<resources>
    <string name="app_name">Profile</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="designation">Designation</string>
    <string name="submit">Submit</string>
    <string name="email_view">Email</string>
    <string name="mobile_view">Mobile</string>
    <string name="designation_view">Designation</string>
    <string name="name_view">Name</string>
    <string name="home_page">Home Page</string>
</resources>